# EVOL_CoreWar

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh
best/: best_1_225.red
galib247/: build_galib_tester.sh  galib_tester  galib_tester.cpp
galib247/ga/: BUILD  GA1DArrayGenome.C  GA2DArrayGenome.C
galib247/galib_tester.dSYM/Contents/: Info.plist
galib247/galib_tester.dSYM/Contents/Resources/DWARF/: galib_tester
galib247/galib_tester.dSYM/Contents/Resources/Relocations/aarch64/: galib_tester.yml
include/: Config.h  CoreWarEvaluator.h  WarriorEncoder.h
knowhow/: Core War - Wikipedia.html  Redcode kezdõknek.html  The Corewar Info Page.html  pMARS - Portable Redcode Simulator.html
pmars-0.9.4/src/: Makefile  clparse.c  curdisp.c  dwarf.red  sighandler.c  xwindisp.c
src/: CoreWarEvaluator.cpp  WarriorEncoder.cpp  main.cpp
warriors/: Imp.red  paper.red  stonescan.red
